# ubuntu-flutter-plugins

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  default.json  libhandy.doap  melos.yaml  pubspec.yaml  release-please-config.json  renovate.json
.github/: dependabot.yaml
.gitlab-ci/: check-abi
doc/: build-howto.md  meson.build  visual-index.md
example/: desktop.dart  distro.dart  example.dart  main.dart  pubspec.yaml
examples/: handy-demo.gresources.xml  hdy-tab-view-demo-window.ui
glade/: glade-catalog.dtd  glade-hdy-bin.h  glade-hdy-expander-row.h  glade-hdy-leaflet.c  glade-hdy-preferences-page.c  glade-hdy-search-bar.c  glade-hdy-search-bar.h  glade-hdy-swipe-group.c  glade-hdy-swipe-group.h  libhandy.xml
lib/: flutter_wizard.dart  main.dart  pages.dart  platform.dart  routes.dart  safe_change_notifier.dart  ubuntu_flavor.dart  widgets.dart  wizard.dart  wizard_router.dart  xdg_icons.dart
linux/: xdg_icons_plugin.cc
po/: LINGUAS  ca.po  cs.po  es.po  hu.po  id.po  oc.po  sl.po  sr.po
src/: hdy-action-row.c  hdy-animation-private.h  hdy-animation.c  hdy-animation.h  hdy-avatar.h  hdy-carousel-box-private.h  hdy-carousel-indicator-dots.c  hdy-carousel.h  hdy-combo-row.h  hdy-deck.c  hdy-deck.h  hdy-expander-row.h  hdy-fading-label.c  hdy-flap.c  hdy-header-group.c  hdy-keypad-button-private.h  hdy-keypad-button.ui  hdy-keypad.c  hdy-keypad.h  hdy-keypad.ui  hdy-leaflet.c  hdy-leaflet.h  hdy-main-private.h  hdy-navigation-direction.c  hdy-preferences-group-private.h  hdy-tab-bar.c  (+26 more)
(+81 files in other folders)
